logs/elfesteem.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ELFEsteem-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/elfesteem'...
Compiling './lib/python3.5/site-packages/elfesteem/cstruct.py'...
***   File "./lib/python3.5/site-packages/elfesteem/cstruct.py", line 117
    print "##%s:" % self.__class__.__name__
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/elfesteem/elf.py'...
***   File "./lib/python3.5/site-packages/elfesteem/elf.py", line 132
    ET_LOOS =         0xfe00L         # OS-specific range start
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elfesteem/elf_init.py'...
***   File "./lib/python3.5/site-packages/elfesteem/elf_init.py", line 822
    print repr(e)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elfesteem/new_cstruct.py'...
***   File "./lib/python3.5/site-packages/elfesteem/new_cstruct.py", line 324
    print all_cstructs
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/elfesteem/pe.py'...
***   File "./lib/python3.5/site-packages/elfesteem/pe.py", line 321
    mask_ptr = 0x8000000000000000L
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elfesteem/pe_init.py'...
***   File "./lib/python3.5/site-packages/elfesteem/pe_init.py", line 572
    print 'Deprecated: Use PE.rva instead of PE.drva'
                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
